[package]
name = "fb_messenger"
version = "0.1.12"
authors = ["Pete @arthas168"]
edition = "2018"
license = "MIT"
description = "A tool that utilizes the Facebook Chat API to send messages to a recipient with a given id."
homepage = "https://www.petkopavlovski.com"
documentation = "https://docs.rs/fb_messenger"
repository = "https://github.com/arthas168/fb_messenger_rust"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }